--- a/index.html
+++ b/index.html
@@ -4,8 +4,76 @@
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.0.0/dist/aframe-extras.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+    <style>
+      #progress-container {
+        position: absolute;
+        bottom: 10%;
+        left: 10%;
+        width: 80%;
+        height: 40px;
+        background-color: #ccc;
+        border-radius: 15px;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center; 
+      }
+
+      #progress-bar {
+        height: 100%;
+        width: 0%;
+        background-color: #fff200;
+        transition: width 0.3s ease;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+      }
+
+      #progress-text {
+        font-family: sans-serif;
+        font-size: 15px;
+        color: #fff;
+        text-shadow: 1px 1px 3px black;
+        z-index: 3;
+        text-align: center;
+      }
+
+      #bouncing-img {
+        position: absolute;
+        bottom: 15%;
+        width: 128px;
+        height: 72px;
+        z-index: 2;
+        transition: left 0.3s ease;
+      }
+
+      @keyframes bounce {
+        0% {
+          transform: translateX(-5px) translateY(0);
+        }
+        50% {
+          transform: translateX(0px) translateY(-5px);
+        }
+        100% {
+          transform: translateX(5px) translateY(0);
+        }
+      }
+
+      #bouncing-img.bouncing {
+        animation: bounce 0.5s infinite alternate; /* Ajusta la duración y el timing según sea necesario */
+      }
+    </style>
   </head>
   <body>
+    <!-- Progress UI -->
+    <img id="bouncing-img" src="https://157.253.192.178:8080/seneca_corriendo.png" />
+    <div id="progress-container">
+      <div id="progress-text">0 / 5 detectados (0%)</div>
+      <div id="progress-bar"></div>
+    </div>
+
+    <!-- AR Scene -->
     <a-scene
       mindar-image="imageTargetSrc: https://157.253.192.178:8080/seneca.mind; maxTrack: 5"
       color-space="sRGB"
@@ -23,60 +91,70 @@
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      <!-- Marker 0 -->
-      <a-entity mindar-image-target="targetIndex: 0">
-        <a-gltf-model
-          rotation="0 0 0"
-          position="0 -0.25 0"
-          scale="0.5 0.5 0.5"
-          src="#seneca_controller"
-          animation-mixer
-        ></a-gltf-model>
+      <a-entity id="marker0" mindar-image-target="targetIndex: 0">
+        <a-gltf-model src="#seneca_controller" rotation="0 0 0" position="0 -0.25 0" scale="0.5 0.5 0.5" animation-mixer></a-gltf-model>
       </a-entity>
 
-      <!-- Marker 1 -->
-      <a-entity mindar-image-target="targetIndex: 1">
-        <a-gltf-model
-          rotation="0 0 0"
-          position="0 -0.25 0"
-          scale="0.5 0.5 0.5"
-          src="#seneca_pc"
-          animation-mixer
-        ></a-gltf-model>
+      <a-entity id="marker1" mindar-image-target="targetIndex: 1">
+        <a-gltf-model src="#seneca_pc" rotation="0 0 0" position="0 -0.25 0" scale="0.5 0.5 0.5" animation-mixer></a-gltf-model>
       </a-entity>
 
-      <!-- Marker 2 -->
-      <a-entity mindar-image-target="targetIndex: 2">
-        <a-gltf-model
-          rotation="0 0 0"
-          position="0 -0.25 0"
-          scale="0.5 0.5 0.5"
-          src="#seneca_robot"
-          animation-mixer
-        ></a-gltf-model>
+      <a-entity id="marker2" mindar-image-target="targetIndex: 2">
+        <a-gltf-model src="#seneca_robot" rotation="0 0 0" position="0 -0.25 0" scale="0.5 0.5 0.5" animation-mixer></a-gltf-model>
       </a-entity>
 
-      <!-- Marker 3 -->
-      <a-entity mindar-image-target="targetIndex: 3">
-        <a-gltf-model
-          rotation="0 0 0"
-          position="0 -0.25 0"
-          scale="0.5 0.5 0.5"
-          src="#seneca_maze"
-          animation-mixer
-        ></a-gltf-model>
+      <a-entity id="marker3" mindar-image-target="targetIndex: 3">
+        <a-gltf-model src="#seneca_maze" rotation="0 0 0" position="0 -0.25 0" scale="0.5 0.5 0.5" animation-mixer></a-gltf-model>
       </a-entity>
 
-      <!-- Marker 4 -->
-      <a-entity mindar-image-target="targetIndex: 4">
-        <a-gltf-model
-          rotation="0 0 0"
-          position="0 -0.25 0"
-          scale="0.5 0.5 0.5"
-          src="#seneca_vr"
-          animation-mixer
-        ></a-gltf-model>
+      <a-entity id="marker4" mindar-image-target="targetIndex: 4">
+        <a-gltf-model src="#seneca_vr" rotation="0 0 0" position="0 -0.25 0" scale="0.5 0.5 0.5" animation-mixer></a-gltf-model>
       </a-entity>
     </a-scene>
+
+    <!-- Progress Script -->
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const totalMarkers = 5;
+        const markerIds = ["marker0", "marker1", "marker2", "marker3", "marker4"];
+        const detected = new Set();
+
+        const progressBar = document.getElementById("progress-bar");
+        const progressText = document.getElementById("progress-text");
+        const bouncingImg = document.getElementById("bouncing-img");
+        const container = document.getElementById("progress-container");
+
+        const updateProgress = () => {
+          const count = detected.size;
+          const percent = (count / totalMarkers) * 100;
+          progressBar.style.width = percent + "%";
+          progressText.textContent = `${count} / ${totalMarkers} detectados (${Math.round(percent)}%)`;
+
+          const containerWidth = container.clientWidth;
+          const imgWidth = bouncingImg.clientWidth;
+          const maxLeft = containerWidth - imgWidth/2;
+          const newLeft = (percent / 100) * maxLeft;
+          bouncingImg.style.left = newLeft + "px";
+
+          if (count > 0) {
+            bouncingImg.classList.add("bouncing");
+          } else {
+            bouncingImg.classList.remove("bouncing");
+          }
+        };
+
+        markerIds.forEach((id) => {
+          const marker = document.getElementById(id);
+          marker.addEventListener("targetFound", () => {
+            detected.add(id);
+            updateProgress();
+          });
+          marker.addEventListener("targetLost", () => {
+            detected.delete(id);
+            updateProgress();
+          });
+        });
+      });
+    </script>
   </body>
 </html>
