--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Inclusión de la librería A-Frame para la estructura de la escena 3D/VR/AR -->
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <!-- Inclusión de A-Frame Extras, utilizado aquí para el componente animation-mixer para animar modelos glTF -->
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.0.0/dist/aframe-extras.min.js"></script>
+    <!-- Inclusión de MindAR para el reconocimiento de imágenes y la integración con A-Frame -->
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
     <style>
       #progress-container {
@@ -48,32 +51,35 @@
         transition: left 0.3s ease;
       }
 
+      /* Definición de la animación de rebote para la imagen de Séneca */
       @keyframes bounce {
         0% {
-          transform: translateX(-5px) translateY(0);
+          transform: translateX(-5px) translateY(0); /* Movimiento hacia la izquierda */
         }
         50% {
-          transform: translateX(0px) translateY(-5px);
+          transform: translateX(0px) translateY(-5px); /* Movimiento hacia arriba y al centro */
         }
         100% {
-          transform: translateX(5px) translateY(0);
+          transform: translateX(5px) translateY(0); /* Movimiento hacia la derecha */
         }
       }
 
+      /* Aplica la animación 'bounce' cuando la imagen tiene la clase 'bouncing' */
       #bouncing-img.bouncing {
         animation: bounce 0.5s infinite alternate; /* Ajusta la duración y el timing según sea necesario */
       }
     </style>
   </head>
   <body>
-    <!-- Progress UI -->
+    <!-- Interfaz de Usuario para mostrar el Progreso de detección de marcadores -->
     <img id="bouncing-img" src="seneca_corriendo.png" />
     <div id="progress-container">
       <div id="progress-text">0 / 5 detectados (0%)</div>
       <div id="progress-bar"></div>
     </div>
 
-    <!-- AR Scene -->
+    <!-- Escena de Realidad Aumentada (AR) configurada con A-Frame y MindAR -->
+     <!-- Configura MindAR: usa 'seneca.mind' para los marcadores y rastrea hasta 5 simultáneamente -->
     <a-scene
       mindar-image="imageTargetSrc: seneca.mind; maxTrack: 5"
       color-space="sRGB"
@@ -81,7 +87,9 @@
       vr-mode-ui="enabled: false"
       device-orientation-permission-ui="enabled: false"
     >
+      <!-- Definición de Assets (recursos) que se precargarán -->
       <a-assets>
+        <!-- Modelos 3D de Séneca en formato glTF -->
         <a-asset-item id="seneca_controller" src="seneca_controller_final.gltf"></a-asset-item>
         <a-asset-item id="seneca_vr" src="seneca_vr_final.gltf"></a-asset-item>
         <a-asset-item id="seneca_robot" src="seneca_robot_final.gltf"></a-asset-item>
@@ -89,9 +97,16 @@
         <a-asset-item id="seneca_pc" src="seneca_pc_final.gltf"></a-asset-item>
       </a-assets>
 
+      <!-- Cámara de la escena AR. Posicionada en el origen. Controles de mirada deshabilitados ya que la navegación es por movimiento del dispositivo. -->
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      <a-entity id="marker0" mindar-image-target="targetIndex: 0">
+      
+      <!-- LISTA DE MARCADORES -->
+
+
+      <!-- Entidad para el Marcador 0 -->
+      <a-entity id="marker0" mindar-image-target="targetIndex: 0"> <!-- 'targetIndex: 0' lo vincula al primer marcador definido en seneca.mind -->
+        <!-- Modelo 3D que se mostrará cuando se detecte el marcador 0. Incluye rotación, posición, escala y el componente 'animation-mixer' para reproducir animaciones -->
         <a-gltf-model src="#seneca_controller" rotation="0 0 0" position="0 -0.25 0" scale="0.5 0.5 0.5" animation-mixer></a-gltf-model>
       </a-entity>
 
@@ -110,32 +125,43 @@
       <a-entity id="marker4" mindar-image-target="targetIndex: 4">
         <a-gltf-model src="#seneca_vr" rotation="0 0 0" position="0 -0.25 0" scale="0.5 0.5 0.5" animation-mixer></a-gltf-model>
       </a-entity>
+
+      
+      <!-- LISTA DE MARCADORES -->
+
+
     </a-scene>
 
-    <!-- Progress Script -->
+    <!-- Script para manejar la lógica de la barra de progreso y la detección de marcadores -->
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         const totalMarkers = 5;
         const markerIds = ["marker0", "marker1", "marker2", "marker3", "marker4"];
         const detected = new Set();
 
+        // Obtener referencias a los elementos de la UI de progreso
         const progressBar = document.getElementById("progress-bar");
         const progressText = document.getElementById("progress-text");
         const bouncingImg = document.getElementById("bouncing-img");
         const container = document.getElementById("progress-container");
 
+        // Función para actualizar la barra de progreso
         const updateProgress = () => {
-          const count = detected.size;
+          const count = detected.size; // Se obtiene el número de marcadores en base a la lista de detectados
           const percent = (count / totalMarkers) * 100;
           progressBar.style.width = percent + "%";
           progressText.textContent = `${count} / ${totalMarkers} detectados (${Math.round(percent)}%)`;
 
+          // Calcula la nueva posición de la imagen de Séneca en la barra de progreso
           const containerWidth = container.clientWidth;
           const imgWidth = bouncingImg.clientWidth;
+          // Se resta la mitad del ancho de la imagen para que el centro de la imagen se alinee con el progreso
           const maxLeft = containerWidth - imgWidth/2;
           const newLeft = (percent / 100) * maxLeft;
           bouncingImg.style.left = newLeft + "px";
 
+          // Añade o quita la clase 'bouncing' para activar/desactivar la animación de rebote
+          // según si hay marcadores detectados o no
           if (count > 0) {
             bouncingImg.classList.add("bouncing");
           } else {
@@ -143,12 +169,19 @@
           }
         };
 
+        // Itera sobre los marcadores para contar cuando son detectados o perdidos, de ese modo se sabe el progreso
+        // y se actualiza la barra de progreso y la imagen de Séneca.
         markerIds.forEach((id) => {
-          const marker = document.getElementById(id);
+          const marker = document.getElementById(id);// Obtiene la entidad del marcador
+
+
+          // Cuando el marcador es detectado se añade a la lista de detectados y se actualiza el progreso
           marker.addEventListener("targetFound", () => {
             detected.add(id);
             updateProgress();
           });
+
+          // Cuando el marcador es perdido se elimina de la lista de detectados y se actualiza el progreso
           marker.addEventListener("targetLost", () => {
             detected.delete(id);
             updateProgress();
